fixed add this button to not care about single quotes in the title of the post

--- a/views/articles/_article.rhtml
+++ b/views/articles/_article.rhtml
@@ -6,7 +6,7 @@
 
       <!-- AddThis Button BEGIN -->
       <script type="text/javascript">addthis_pub  = 'knewter';</script>
-      <a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '<%= article_url(article) -%>', '<%= article.title -%>')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/button1-addthis.gif" width="125" height="16" border="0" alt="" /></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
+      <a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '<%= article_url(article) -%>', '<%=h article.title.gsub("'", '-') -%>')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/button1-addthis.gif" width="125" height="16" border="0" alt="" /></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
       <!-- AddThis Button END -->
 
       <%= article.contents -%>
